--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Markdown Editor</title>
     <!-- Bootstrap 5 CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -27,9 +27,10 @@
         id="input"
         class="form-control h-100"
         placeholder="Type here..."
+        v-model="message"
       ></textarea>
-      <div id="output" class="h-100">Foo</div>
-      <div id="counter">Count</div>
+      <div id="output" class="h-100" v-html="htmlOutput"></div>
+      <div id="counter">{{ charCount }} characters</div>
     </div>
     <script src="app.js"></script>
   </body>
